# qaguru_lesson_18

./: pyproject.toml
